--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,14 @@ version: '3'
 services:
   db:
     image: postgres:14.3
+    container_name: ${DB_NAME}  
     restart: always
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432" 
     environment:
+      POSTGRES_DB: ${DB_NAME} 
+      POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
-    container_name: teslodb
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
+      TZ: 'America/El_Salvador'
+      PGTZ: 'America/El_Salvador'
+ 
