--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,35 @@
-version: '3'
+version: '3.8'
 
 
 services:
-  db:
+  db_scrum:
     image: postgres:14.3
-    container_name: ${DB_NAME}  
+    container_name: ${DB_HOST}   
     restart: always
+    # networks:
+    #   - scrumm
     ports:
       - "${DB_PORT}:5432" 
     environment:
       POSTGRES_DB: ${DB_NAME} 
-      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_USER: ${DB_NAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       TZ: 'America/El_Salvador'
       PGTZ: 'America/El_Salvador'
+    volumes:
+      - ./postgres:/var/lib/postgresql/data 
  
+  # app_scrum: 
+  #   container_name: app_scrum 
+  #   build: .
+  #   restart: always
+  #   networks:
+  #     - scrumm
+  #   depends_on:
+  #     - db_scrum
+  #   ports:
+  #     - "${PORT}:3000"
+
+# networks:
+#   scrumm:
+#     external: false
